# VLCNetPlanner

./: .replit  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-Scatter-dragmode-Did--1729966997638.txt  Pasted-ValueError-Invalid-value-of-type-builtins-str-received-for-the-dragmode-property-of-layout-Rece-1729962899789.txt  README.md  main.py  pyproject.toml
components/: floor_plan.py  visualization.py  vlc_components.py
utils/: cad_importer.py  coverage_analysis.py  data_handler.py  optimization.py
