[project]
name = "repl-nix-vlcnetplanner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.3.4",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
    "streamlit>=1.39.0",
    "svgwrite>=1.4.3",
]
